# safetech

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fetch.py  scan.py
src/reconkit/: __init__.py
src/reconkit/net/: __init__.py  cache.py  ratelimit.py  ssrf.py
src/safefetch/: __init__.py  cache.py  guard.py  ratelimit.py
tests/: test_guard.py  test_ratelimit.py  test_ssrf.py
