[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconkit"
version = "0.1.0"
description = "Network-hygiene primitives for outbound-fetching services: SSRF guard, cross-process rate limiter, fail-open HTTP cache."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["ssrf", "security", "rate-limit", "http-cache", "requests", "webhooks"]
authors = [{ name = "Serhii Budiak" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.optional-dependencies]
http = ["requests>=2.20"]
redis = ["redis>=4.0"]
dev = ["pytest>=7", "requests>=2.20", "redis>=4.0"]

[project.urls]
Homepage = "https://github.com/OWNER/reconkit"
Issues = "https://github.com/OWNER/reconkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reconkit"]
